--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ setproctitle = "~1.1.10"
 
 [tool.poetry.dev-dependencies]
 ipython = "~7.14.0"
+nose = "^1.3.7"
+docker = "^4.2.0"
 
 [tool.poetry.scripts]
 redis-data-transfer = "redis_data_transfer:main"
