--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,24 @@ build-backend = "poetry.masonry.api"
 name = "redis-data-transfer"
 version = "0.2.0"
 description = "Transfer data between a redis instances or clusters"
+license = "MIT"
 authors = ["EDITED Devs <dev@edited.com>"]
+readme = "README.md"
+homepage = "https://github.com/EDITD/redis_data_transfer"
+repository = "https://github.com/EDITD/redis_data_transfer"
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Console",
+    "Intended Audience :: System Administrators",
+    "License :: OSI Approved :: MIT License",
+    "Topic :: Database",
+    "Topic :: System :: Systems Administration",
+    "Topic :: Utilities",
+]
+include = [
+    "CHANGELOG.md",
+    "LICENSE",
+]
 
 [tool.poetry.dependencies]
 python = "^3.6"
