--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,6 @@ envlist = py36,py37,py38,py39
 isolated_build=true
 
 [testenv]
-commands = nosetests
+commands = python -m unittest
 deps =
-    nose >= 1.3.7
     docker ~= 4.2.0
