Install package using poetry inside tox envs

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,11 @@
 [tox]
 envlist = py36,py37,py38,py39
 isolated_build=true
+skipsdist = true
 
 [testenv]
-commands = python -m unittest
-deps =
-    docker ~= 4.2.0
+whitelist_externals = poetry
+skip_install = true
+commands =
+    poetry install -v
+    poetry run python -m unittest
